[tool.poetry]
name = "cli-chatbot"
version = "0.1.0"
description = "GPT powered CLI Chatbot"
authors = ["Dev Gill <26435947+sdevgill@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "cli_chatbot"}]

[tool.poetry.dependencies]
python = "^3.11"
openai = "^0.27.4"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
